--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,23 @@
+# Setup
+title:        Vision5A
+tagline:      Computer Vision Lecture
+#logo:         images/
+baseurl:      ""
+paginate:     1
+
 theme: jekyll-theme-hacker
+
+
+# About/contact
+author:
+  name:       Aurelien Plyer
+#  url:        TODO
+
+gems:
+  - jekyll-paginate
+
+#Others
+markdown: kramdown
+
+include:
+- _pages
